packages/main/src/themes/Tag.css
@import "./InvisibleTextStyles.css";

:host(:not([hidden])) {
	display: inline-block;
}

:host {
	font-size: var(--sapFontSmallSize);
	font-family: var(--sapFontBoldFamily);
	font-weight: var(--_ui5-tag-font-weight);
	letter-spacing: var(--_ui5-tag-letter-spacing);
}

.ui5-tag-root {
	display: flex;
	align-items: center;
	justify-content: center;
	width: 100%;
	min-width: 1.125em;
	max-width: 100%;
	min-height: var(--_ui5-tag-height);
	height: auto;
	box-sizing: border-box;
	padding: 0 0.25rem;
	border: 0.0625rem solid;
	border-radius: var(--sapButton_BorderCornerRadius);
	white-space: normal;
	font-size: inherit;
	font-family: inherit;
	font-weight: inherit;
	line-height: inherit;
	letter-spacing: inherit;
}

:host([interactive]) .ui5-tag-root:active {
	text-shadow: var(--ui5-tag-text-shadow);
}

:host([interactive]) .ui5-tag-root {
	cursor: pointer;
}

:host([desktop][interactive]) .ui5-tag-root:focus,
:host([interactive]) .ui5-tag-root:focus-visible {
	outline: var(--sapContent_FocusWidth) var(--sapContent_FocusStyle) var(--sapContent_FocusColor);
	outline-offset: 1px;
}

:host([wrapping-type="None"]) .ui5-tag-root {
	white-space: nowrap;
	height: var(--_ui5-tag-height);
}

:host([_icon-only]) .ui5-tag-root {
	padding-inline: var(--_ui5-tag-padding-inline-icon-only);
}

.ui5-tag-text {
	text-transform: var(--_ui5-tag-text-transform);
	text-align: start;
	pointer-events: none;
	overflow: hidden;
	text-overflow: ellipsis;
}

:host([_has-icon]) .ui5-tag-text {
	padding-inline-start: var(--_ui5-tag-icon-gap);
}

[ui5-icon],
::slotted([ui5-icon]) {
	width: var(--_ui5-tag-icon-width);
	min-width: var(--_ui5-tag-icon-width);
	height:  calc(var(--_ui5-tag-height) - 0.125rem); /* remove width of the border since tag root is with box-sizing:border-box*/
	color: inherit;
	pointer-events: none;
	align-self: flex-start;
}

:host([wrapping-type="None"]) [ui5-icon],
:host([wrapping-type="None"]) ::slotted([ui5-icon]) {
	align-self: auto;
}

/* Value State Design Types */
.ui5-tag-root {
	background-color: var(--sapNeutralBackground);
	border-color: var(--sapNeutralBorderColor);
	color: var(--sapTextColor);
	text-shadow: var(--ui5-tag-text-shadow);
}

:host([interactive]) .ui5-tag-root:hover {
	background-color: var(--sapButton_Neutral_Hover_Background);
	border-color: var(--sapButton_Neutral_Hover_BorderColor);
	color: var(--sapButton_Neutral_Hover_TextColor);
}

:host([interactive]) .ui5-tag-root:active {
	background-color: var(--sapButton_Neutral_Active_Background);
	border-color: var(--sapButton_Neutral_Active_BorderColor);
	color: var(--sapButton_Active_TextColor);
}

:host([design="Positive"]) .ui5-tag-root {
	background-color: var(--sapButton_Success_Background);
	border-color: var(--sapButton_Success_BorderColor);
	color: var(--sapButton_Success_TextColor);
	text-shadow: var(--ui5-tag-contrast-text-shadow);
}

:host([interactive][design="Positive"]) .ui5-tag-root:hover {
	background-color: var(--sapButton_Success_Hover_Background);
	border-color: var(--sapButton_Success_Hover_BorderColor);
	color: var(--sapButton_Success_Hover_TextColor);
}

:host([interactive][design="Positive"]) .ui5-tag-root:active {
	background-color: var(--sapButton_Success_Active_Background);
	border-color: var(--sapButton_Success_Active_BorderColor);
	color: var(--sapButton_Accept_Selected_TextColor);
}

:host([design="Negative"]) .ui5-tag-root {
	background-color: var(--sapButton_Negative_Background);
	border-color: var(--sapButton_Negative_BorderColor);
	color: var(--sapButton_Negative_TextColor);
	text-shadow: var(--ui5-tag-contrast-text-shadow);
}

:host([interactive][design="Negative"]) .ui5-tag-root:hover {
	background-color: var(--sapButton_Negative_Hover_Background);
	border-color: var(--sapButton_Negative_Hover_BorderColor);
	color: var(--sapButton_Negative_Hover_TextColor);
}

:host([interactive][design="Negative"]) .ui5-tag-root:active {
	background-color: var(--sapButton_Negative_Active_Background);
	border-color: var(--sapButton_Negative_Active_BorderColor);
	color: var(--sapButton_Reject_Selected_TextColor);
}

:host([design="Critical"]) .ui5-tag-root {
	background-color: var(--sapButton_Critical_Background);
	border-color: var(--sapButton_Critical_BorderColor);
	color: var(--sapButton_Critical_TextColor);
	text-shadow: var(--ui5-tag-contrast-text-shadow);
}

:host([interactive][design="Critical"]) .ui5-tag-root:hover {
	background-color: var(--sapButton_Critical_Hover_Background);
	border-color: var(--sapButton_Critical_Hover_BorderColor);
	color: var(--sapButton_Critical_Hover_TextColor);
}

:host([interactive][design="Critical"]) .ui5-tag-root:active {
	background-color: var(--sapButton_Critical_Active_Background);
	border-color: var(--sapButton_Critical_Active_BorderColor);
	color: var(--sapButton_Attention_Selected_TextColor);
}

:host([design="Information"]) .ui5-tag-root {
	background-color: var(--sapButton_Information_Background);
	border-color: var(--sapButton_Information_BorderColor);
	color: var(--sapButton_Information_TextColor);
	text-shadow: var(--ui5-tag-information-text-shadow);
}

:host([interactive][design="Information"]) .ui5-tag-root:hover {
	background-color: var(--sapButton_Information_Hover_Background);
	border-color: var(--sapButton_Information_Hover_BorderColor);
	color: var(--sapButton_Information_Hover_TextColor);
}

:host([interactive][design="Information"]) .ui5-tag-root:active {
	background-color: var(--sapButton_Information_Active_Background);
	border-color: var(--sapButton_Information_Active_BorderColor);
	color: var(--sapButton_Selected_TextColor);
}

/* Set1 Design Type */

:host([design="Set1"]) .ui5-tag-root {
	text-shadow: var(--ui5-tag-contrast-text-shadow);
}

:host([design="Set1"]) .ui5-tag-root,
:host([interactive][design="Set1"]) .ui5-tag-root {
	background-color: var(--sapIndicationColor_1_Background);
	border-color: var(--sapIndicationColor_1_BorderColor);
	color: var(--sapIndicationColor_1_TextColor);
}
/* ... */

